--- a/Server_MVC/Server_MVC.csproj
+++ b/Server_MVC/Server_MVC.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\PartyParticipantsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -169,7 +170,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="ViewModel\" />
     <Folder Include="Views\Party\" />
   </ItemGroup>
   <ItemGroup>
